objects/State_Province_Value_Map__c.object
<CustomObject>
    <fields>
        <fullName>Siebel_Country_Code__c</fullName>
        <label>CountryCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_State_Province_Code_Out__c</fullName>
        <label>StateProvinceCodeOut</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_State_Province_Name_Out__c</fullName>
        <label>StateProvinceNameOut</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_State_Province_Value_In__c</fullName>
        <label>StateProvinceValueIn</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>State Province Value Map</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>State_Province_values</fullName>
        <columns>Siebel_Country_Code__c</columns>
        <columns>Siebel_State_Province_Code_Out__c</columns>
        <columns>Siebel_State_Province_Name_Out__c</columns>
        <columns>Siebel_State_Province_Value_In__c</columns>
        <filterScope>Everything</filterScope>
        <label>State Province values</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>State Province Value Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Province Value Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>